# FMDV

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  go.mod  main.go  test.md
.github/workflows/: ci.yml
bench/results/: README.md
core/: bench_log.h  edit_assist.cpp  edit_assist.h  layout.cpp  layout.h  markdown.cpp  markdown.h  release_info.cpp  release_info.h  str.cpp  str.h  text_select.cpp  text_select.h
cpp/: ISSUES.md  PLAN.md  README.md  bench.cpp  bench.h  build.ps1  fmdv.cpp  fmdv.rc  markdown.cpp  markdown.h  prefs.cpp  prefs.h  render.cpp  render.h  theme.h  updater.cpp  updater.h  version.h
cpp/tests/: capture.ps1  run-tests-hidden.ps1  run-tests.ps1  stress.md
docs/: macos-implementation-guide.md  mermaid-flowchart-plan.md  render-core-layout-migration.md  windows-verification.md
frontends/cli/: fmdv_cli.cpp
frontends/macos/: Info.plist  app.mm  mac_render.h  mac_render.mm  main.mm
frontends/macos/appicon/: make_icon.mm
legacy/webview2/: README.md  go.sum
scripts/: notarize.sh
tests/: bench_log_test.cpp  edit_assist_test.cpp  layout_test.cpp  markdown_test.cpp  release_info_test.cpp  run-tests.sh  str_test.cpp  test_check.h  text_select_test.cpp
